# rust_raytracer

./: Cargo.toml  simple_scene.json
cmdline/: Cargo.toml
cmdline/src/: main.rs
engine/: Cargo.toml
engine/src/: image.rs  input.rs  lib.rs  light.rs  material.rs  object.rs  scene.rs
src/: camera.rs  config.rs  image.rs  input.rs  main.rs  object.rs  scene.rs  timer.rs
